--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "devDependencies": {
     "@types/react": "18.2.6",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.23"
+    "eslint-config-prettier": "^8.8.0",
+    "postcss": "^8.4.23",
+    "prettier": "2.8.8"
   }
 }
