--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.6",
+    "@prisma/client": "^4.14.1",
     "@types/node": "20.2.1",
     "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.3",
     "next": "13.4.3",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
@@ -25,10 +29,12 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/react": "18.2.6",
     "autoprefixer": "^10.4.14",
     "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.23",
-    "prettier": "2.8.8"
+    "prettier": "2.8.8",
+    "prisma": "^4.14.1"
   }
 }
